--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -254,15 +254,32 @@ Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="huang2019fast">15</a>]
+[<a name="al2019survey">15</a>]
 </td>
 <td class="bibtexitem">
-Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
- A fast parallel genetic programming framework with adaptively
-  weighted primitives for symbolic regression.
- <em>Soft Computing</em>, oct 2019.
-[&nbsp;<a href="publication-accepted_bib.html#huang2019fast">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/s00500-019-04379-4">DOI</a>&nbsp;]
+Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, Binh Tran,
+  Bing Xue, and Mengjie Zhang.
+ A survey on evolutionary machine learning.
+ <em>Journal of the Royal Society of New Zealand</em>, 49(2):205--228,
+  2019.
+[&nbsp;<a href="publication-accepted_bib.html#al2019survey">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1080/03036758.2019.1609052">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="nguyen2019hybrid">16</a>]
+</td>
+<td class="bibtexitem">
+Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
+ A hybrid genetic programming algorithm for automated design of
+  dispatching rules.
+ <em>Evolutionary Computation</em>, 27(3):467--496, 2019.
+[&nbsp;<a href="publication-accepted_bib.html#nguyen2019hybrid">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1162/evco_a_00230">DOI</a>&nbsp;]
 
 </td>
 </tr>
