--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -187,15 +187,31 @@
 }
 </pre>
 
-<a name="huang2019fast"></a><pre>
-@article{<a href="publication-accepted.html#huang2019fast">huang2019fast</a>,
-  title = {A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression},
-  author = {Huang, Zhixing and Zhong, Jinghui and Feng, Liang and Mei, Yi and Cai, Wentong},
-  journal = {Soft Computing},
-  month = {oct},
+<a name="al2019survey"></a><pre>
+@article{<a href="publication-accepted.html#al2019survey">al2019survey</a>,
+  title = {A Survey on Evolutionary Machine Learning},
+  author = {Al-Sahaf, Harith and Bi, Ying and Chen, Qi and Lensen, Andrew and Mei, Yi and Sun, Yanan and Tran, Binh and Xue, Bing and Zhang, Mengjie},
+  journal = {Journal of the Royal Society of New Zealand},
+  volume = {49},
+  number = {2},
+  pages = {205--228},
   year = {2019},
-  publisher = {Springer},
-  doi = {10.1007/s00500-019-04379-4}
+  publisher = {Taylor \& Francis Production},
+  doi = {10.1080/03036758.2019.1609052}
+}
+</pre>
+
+<a name="nguyen2019hybrid"></a><pre>
+@article{<a href="publication-accepted.html#nguyen2019hybrid">nguyen2019hybrid</a>,
+  title = {A Hybrid Genetic Programming Algorithm for Automated Design of Dispatching Rules},
+  author = {Nguyen, Su and Mei, Yi and Xue, Bing and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  volume = {27},
+  number = {3},
+  pages = {467--496},
+  year = {2019},
+  publisher = {MIT Press},
+  doi = {10.1162/evco_a_00230}
 }
 </pre>
 
