--- a/publication-journal.html
+++ b/publication-journal.html
@@ -18,15 +18,15 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="maclachlan2019genetic">1</a>]
+[<a name="huang2019fast">1</a>]
 </td>
 <td class="bibtexitem">
-Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
- Genetic programming hyper-heuristics with vehicle collaboration for
-  uncertain capacitated arc routing problems.
- <em>Evolutionary Computation</em>, nov 2019.
-[&nbsp;<a href="publication-journal_bib.html#maclachlan2019genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1162/evco_a_00267">DOI</a>&nbsp;]
+Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
+ A fast parallel genetic programming framework with adaptively
+  weighted primitives for symbolic regression.
+ <em>Soft Computing</em>, 24:7523--7539, 2020.
+[&nbsp;<a href="publication-journal_bib.html#huang2019fast">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1007/s00500-019-04379-4">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -34,23 +34,7 @@ Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="al2019survey">2</a>]
-</td>
-<td class="bibtexitem">
-Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, Binh Tran,
-  Bing Xue, and Mengjie Zhang.
- A survey on evolutionary machine learning.
- <em>Journal of the Royal Society of New Zealand</em>, apr 2019.
-[&nbsp;<a href="publication-journal_bib.html#al2019survey">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1080/03036758.2019.1609052">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="liu2019predictive">3</a>]
+[<a name="liu2019predictive">2</a>]
 </td>
 <td class="bibtexitem">
 Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
@@ -66,23 +50,7 @@ Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2018hybrid">4</a>]
-</td>
-<td class="bibtexitem">
-Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
- A hybrid genetic programming algorithm for automated design of
-  dispatching rules.
- <em>Evolutionary Computation</em>, in Press, 2018.
-[&nbsp;<a href="publication-journal_bib.html#nguyen2018hybrid">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1162/evco_a_00230">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="tan2018evolutionary">5</a>]
+[<a name="tan2018evolutionary">3</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -98,7 +66,7 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="xie2018bi">6</a>]
+[<a name="xie2018bi">4</a>]
 </td>
 <td class="bibtexitem">
 Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
@@ -115,7 +83,7 @@ Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="park2018investigation">7</a>]
+[<a name="park2018investigation">5</a>]
 </td>
 <td class="bibtexitem">
 John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
@@ -131,7 +99,7 @@ John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2018evolutionary">8</a>]
+[<a name="da2018evolutionary">6</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
@@ -147,7 +115,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2017efficient">9</a>]
+[<a name="mei2017efficient">7</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
@@ -165,7 +133,7 @@ Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="islam2017time">10</a>]
+[<a name="islam2017time">8</a>]
 </td>
 <td class="bibtexitem">
 Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
@@ -181,7 +149,7 @@ Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2017dg2">11</a>]
+[<a name="omidvar2017dg2">9</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -198,7 +166,7 @@ Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2017genetic">12</a>]
+[<a name="nguyen2017genetic">10</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -214,7 +182,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="rahaman2017capra">13</a>]
+[<a name="rahaman2017capra">11</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D Salim.
@@ -229,7 +197,7 @@ Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2017memetic">14</a>]
+[<a name="zhang2017memetic">12</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
@@ -246,7 +214,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2016analysis">15</a>]
+[<a name="liu2016analysis">13</a>]
 </td>
 <td class="bibtexitem">
 Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
@@ -263,7 +231,7 @@ Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016efficient">16</a>]
+[<a name="mei2016efficient">14</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
@@ -281,7 +249,7 @@ Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="consoli2016dynamic">17</a>]
+[<a name="consoli2016dynamic">15</a>]
 </td>
 <td class="bibtexitem">
 Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
@@ -297,7 +265,7 @@ Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016investigation">18</a>]
+[<a name="mei2016investigation">16</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -313,7 +281,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016competitive">19</a>]
+[<a name="mei2016competitive">17</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
@@ -331,7 +299,7 @@ Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2014cooperative">20</a>]
+[<a name="mei2014cooperative">18</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -349,7 +317,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2014cooperative">21</a>]
+[<a name="omidvar2014cooperative">19</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
@@ -367,7 +335,7 @@ Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011memetic">22</a>]
+[<a name="mei2011memetic">20</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -384,7 +352,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011decomposition">23</a>]
+[<a name="mei2011decomposition">21</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -402,7 +370,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tang2009memetic">24</a>]
+[<a name="tang2009memetic">22</a>]
 </td>
 <td class="bibtexitem">
 Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
@@ -420,7 +388,7 @@ Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2009global">25</a>]
+[<a name="mei2009global">23</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
