--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,27 +7,16 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="maclachlan2019genetic"></a><pre>
-@article{<a href="publication-journal.html#maclachlan2019genetic">maclachlan2019genetic</a>,
-  title = {Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems},
-  author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
-  journal = {Evolutionary Computation},
-  month = {nov},
-  year = {2019},
-  publisher = {MIT Press},
-  doi = {10.1162/evco_a_00267}
-}
-</pre>
-
-<a name="al2019survey"></a><pre>
-@article{<a href="publication-journal.html#al2019survey">al2019survey</a>,
-  title = {A Survey on Evolutionary Machine Learning},
-  author = {Al-Sahaf, Harith and Bi, Ying and Chen, Qi and Lensen, Andrew and Mei, Yi and Sun, Yanan and Tran, Binh and Xue, Bing and Zhang, Mengjie},
-  journal = {Journal of the Royal Society of New Zealand},
-  month = {apr},
-  year = {2019},
-  publisher = {Taylor \& Francis Production},
-  doi = {10.1080/03036758.2019.1609052}
+<h1>publication-journal.bib</h1><a name="huang2019fast"></a><pre>
+@article{<a href="publication-journal.html#huang2019fast">huang2019fast</a>,
+  title = {A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression},
+  author = {Huang, Zhixing and Zhong, Jinghui and Feng, Liang and Mei, Yi and Cai, Wentong},
+  journal = {Soft Computing},
+  volume = {24},
+  pages = {7523--7539},
+  year = {2020},
+  publisher = {Springer},
+  doi = {10.1007/s00500-019-04379-4}
 }
 </pre>
 
@@ -40,17 +29,6 @@
   year = {2019},
   publisher = {MIT Press},
   doi = {10.1162/evco_a_00256}
-}
-</pre>
-
-<a name="nguyen2018hybrid"></a><pre>
-@article{<a href="publication-journal.html#nguyen2018hybrid">nguyen2018hybrid</a>,
-  title = {A Hybrid Genetic Programming Algorithm for Automated Design of Dispatching Rules},
-  author = {Nguyen, Su and Mei, Yi and Xue, Bing and Zhang, Mengjie},
-  journal = {Evolutionary Computation},
-  year = {in Press, 2018},
-  publisher = {MIT Press},
-  doi = {10.1162/evco_a_00230}
 }
 </pre>
 
