--- a/publication-journal.html
+++ b/publication-journal.html
@@ -18,23 +18,7 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="huang2019fast">1</a>]
-</td>
-<td class="bibtexitem">
-Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
- A fast parallel genetic programming framework with adaptively
-  weighted primitives for symbolic regression.
- <em>Soft Computing</em>, 24:7523--7539, 2020.
-[&nbsp;<a href="publication-journal_bib.html#huang2019fast">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/s00500-019-04379-4">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="liu2019predictive">2</a>]
+[<a name="liu2019predictive">1</a>]
 </td>
 <td class="bibtexitem">
 Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
@@ -50,7 +34,7 @@ Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2018evolutionary">3</a>]
+[<a name="tan2018evolutionary">2</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -66,7 +50,40 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="xie2018bi">4</a>]
+[<a name="al2019survey">3</a>]
+</td>
+<td class="bibtexitem">
+Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, Binh Tran,
+  Bing Xue, and Mengjie Zhang.
+ A survey on evolutionary machine learning.
+ <em>Journal of the Royal Society of New Zealand</em>, 49(2):205--228,
+  2019.
+[&nbsp;<a href="publication-journal_bib.html#al2019survey">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1080/03036758.2019.1609052">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="nguyen2019hybrid">4</a>]
+</td>
+<td class="bibtexitem">
+Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
+ A hybrid genetic programming algorithm for automated design of
+  dispatching rules.
+ <em>Evolutionary Computation</em>, 27(3):467--496, 2019.
+[&nbsp;<a href="publication-journal_bib.html#nguyen2019hybrid">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1162/evco_a_00230">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="xie2018bi">5</a>]
 </td>
 <td class="bibtexitem">
 Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
@@ -83,7 +100,7 @@ Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="park2018investigation">5</a>]
+[<a name="park2018investigation">6</a>]
 </td>
 <td class="bibtexitem">
 John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
@@ -99,7 +116,7 @@ John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2018evolutionary">6</a>]
+[<a name="da2018evolutionary">7</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
@@ -115,7 +132,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2017efficient">7</a>]
+[<a name="mei2017efficient">8</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
@@ -133,7 +150,7 @@ Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="islam2017time">8</a>]
+[<a name="islam2017time">9</a>]
 </td>
 <td class="bibtexitem">
 Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
@@ -149,7 +166,7 @@ Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2017dg2">9</a>]
+[<a name="omidvar2017dg2">10</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -166,7 +183,7 @@ Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2017genetic">10</a>]
+[<a name="nguyen2017genetic">11</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -182,7 +199,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="rahaman2017capra">11</a>]
+[<a name="rahaman2017capra">12</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D Salim.
@@ -197,7 +214,7 @@ Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2017memetic">12</a>]
+[<a name="zhang2017memetic">13</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
@@ -214,7 +231,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2016analysis">13</a>]
+[<a name="liu2016analysis">14</a>]
 </td>
 <td class="bibtexitem">
 Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
@@ -231,7 +248,7 @@ Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016efficient">14</a>]
+[<a name="mei2016efficient">15</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
@@ -249,7 +266,7 @@ Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="consoli2016dynamic">15</a>]
+[<a name="consoli2016dynamic">16</a>]
 </td>
 <td class="bibtexitem">
 Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
@@ -265,7 +282,7 @@ Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016investigation">16</a>]
+[<a name="mei2016investigation">17</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -281,7 +298,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016competitive">17</a>]
+[<a name="mei2016competitive">18</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
@@ -299,7 +316,7 @@ Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2014cooperative">18</a>]
+[<a name="mei2014cooperative">19</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -317,7 +334,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2014cooperative">19</a>]
+[<a name="omidvar2014cooperative">20</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
@@ -335,7 +352,7 @@ Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011memetic">20</a>]
+[<a name="mei2011memetic">21</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -352,7 +369,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011decomposition">21</a>]
+[<a name="mei2011decomposition">22</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -370,7 +387,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tang2009memetic">22</a>]
+[<a name="tang2009memetic">23</a>]
 </td>
 <td class="bibtexitem">
 Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
@@ -388,7 +405,7 @@ Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2009global">23</a>]
+[<a name="mei2009global">24</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
