--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,20 +7,7 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="huang2019fast"></a><pre>
-@article{<a href="publication-journal.html#huang2019fast">huang2019fast</a>,
-  title = {A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression},
-  author = {Huang, Zhixing and Zhong, Jinghui and Feng, Liang and Mei, Yi and Cai, Wentong},
-  journal = {Soft Computing},
-  volume = {24},
-  pages = {7523--7539},
-  year = {2020},
-  publisher = {Springer},
-  doi = {10.1007/s00500-019-04379-4}
-}
-</pre>
-
-<a name="liu2019predictive"></a><pre>
+<h1>publication-journal.bib</h1><a name="liu2019predictive"></a><pre>
 @article{<a href="publication-journal.html#liu2019predictive">liu2019predictive</a>,
   title = {A Predictive-Reactive Approach with Genetic Programming and Cooperative Co-evolution for Uncertain Capacitated Arc Routing Problem},
   author = {Liu, Yuxin and Mei, Yi and Zhang, Mengjie and Zhang, Zili},
@@ -40,6 +27,34 @@
   year = {in Press, 2018},
   publisher = {IEEE},
   doi = {10.1109/TSC.2018.2793266}
+}
+</pre>
+
+<a name="al2019survey"></a><pre>
+@article{<a href="publication-journal.html#al2019survey">al2019survey</a>,
+  title = {A Survey on Evolutionary Machine Learning},
+  author = {Al-Sahaf, Harith and Bi, Ying and Chen, Qi and Lensen, Andrew and Mei, Yi and Sun, Yanan and Tran, Binh and Xue, Bing and Zhang, Mengjie},
+  journal = {Journal of the Royal Society of New Zealand},
+  volume = {49},
+  number = {2},
+  pages = {205--228},
+  year = {2019},
+  publisher = {Taylor \& Francis Production},
+  doi = {10.1080/03036758.2019.1609052}
+}
+</pre>
+
+<a name="nguyen2019hybrid"></a><pre>
+@article{<a href="publication-journal.html#nguyen2019hybrid">nguyen2019hybrid</a>,
+  title = {A Hybrid Genetic Programming Algorithm for Automated Design of Dispatching Rules},
+  author = {Nguyen, Su and Mei, Yi and Xue, Bing and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  volume = {27},
+  number = {3},
+  pages = {467--496},
+  year = {2019},
+  publisher = {MIT Press},
+  doi = {10.1162/evco_a_00230}
 }
 </pre>
 
