--- a/publication-journal.html
+++ b/publication-journal.html
@@ -50,7 +50,23 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="al2019survey">3</a>]
+[<a name="huang2020fast">3</a>]
+</td>
+<td class="bibtexitem">
+Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
+ A fast parallel genetic programming framework with adaptively
+  weighted primitives for symbolic regression.
+ <em>Soft Computing</em>, 24:7523--7539, 2020.
+[&nbsp;<a href="publication-journal_bib.html#huang2020fast">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1007/s00500-019-04379-4">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="al2019survey">4</a>]
 </td>
 <td class="bibtexitem">
 Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, Binh Tran,
@@ -67,7 +83,7 @@ Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, B
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2019hybrid">4</a>]
+[<a name="nguyen2019hybrid">5</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
@@ -83,7 +99,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="xie2018bi">5</a>]
+[<a name="xie2018bi">6</a>]
 </td>
 <td class="bibtexitem">
 Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
@@ -100,7 +116,7 @@ Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="park2018investigation">6</a>]
+[<a name="park2018investigation">7</a>]
 </td>
 <td class="bibtexitem">
 John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
@@ -116,7 +132,7 @@ John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2018evolutionary">7</a>]
+[<a name="da2018evolutionary">8</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
@@ -132,7 +148,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2017efficient">8</a>]
+[<a name="mei2017efficient">9</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
@@ -150,7 +166,7 @@ Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="islam2017time">9</a>]
+[<a name="islam2017time">10</a>]
 </td>
 <td class="bibtexitem">
 Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
@@ -166,7 +182,7 @@ Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2017dg2">10</a>]
+[<a name="omidvar2017dg2">11</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -183,7 +199,7 @@ Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2017genetic">11</a>]
+[<a name="nguyen2017genetic">12</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -199,7 +215,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="rahaman2017capra">12</a>]
+[<a name="rahaman2017capra">13</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D Salim.
@@ -214,7 +230,7 @@ Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2017memetic">13</a>]
+[<a name="zhang2017memetic">14</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
@@ -231,7 +247,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2016analysis">14</a>]
+[<a name="liu2016analysis">15</a>]
 </td>
 <td class="bibtexitem">
 Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
@@ -248,7 +264,7 @@ Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016efficient">15</a>]
+[<a name="mei2016efficient">16</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
@@ -266,7 +282,7 @@ Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="consoli2016dynamic">16</a>]
+[<a name="consoli2016dynamic">17</a>]
 </td>
 <td class="bibtexitem">
 Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
@@ -282,7 +298,7 @@ Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016investigation">17</a>]
+[<a name="mei2016investigation">18</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -298,7 +314,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016competitive">18</a>]
+[<a name="mei2016competitive">19</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
@@ -316,7 +332,7 @@ Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2014cooperative">19</a>]
+[<a name="mei2014cooperative">20</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -334,7 +350,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2014cooperative">20</a>]
+[<a name="omidvar2014cooperative">21</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
@@ -352,7 +368,7 @@ Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011memetic">21</a>]
+[<a name="mei2011memetic">22</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -369,7 +385,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011decomposition">22</a>]
+[<a name="mei2011decomposition">23</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -387,7 +403,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tang2009memetic">23</a>]
+[<a name="tang2009memetic">24</a>]
 </td>
 <td class="bibtexitem">
 Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
@@ -405,7 +421,7 @@ Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2009global">24</a>]
+[<a name="mei2009global">25</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
