--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -30,6 +30,19 @@
 }
 </pre>
 
+<a name="huang2020fast"></a><pre>
+@article{<a href="publication-journal.html#huang2020fast">huang2020fast</a>,
+  title = {A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression},
+  author = {Huang, Zhixing and Zhong, Jinghui and Feng, Liang and Mei, Yi and Cai, Wentong},
+  journal = {Soft Computing},
+  volume = {24},
+  pages = {7523--7539},
+  year = {2020},
+  publisher = {Springer},
+  doi = {10.1007/s00500-019-04379-4}
+}
+</pre>
+
 <a name="al2019survey"></a><pre>
 @article{<a href="publication-journal.html#al2019survey">al2019survey</a>,
   title = {A Survey on Evolutionary Machine Learning},
