--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2020/04/01, Joao Costa, research objectives for PhD proposals, part 3 2020/03/25, Tao Shi, TPDS paper 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers.">
+  <meta name="description" content="2020/04/22, Soheila Sadeghiram, 2020/04/15, Guanqiang Gao, memetic algorithm for multi-robot task allocation 2020/04/08, Chen Wang, survey on noisy evolutionary computation. 2020/04/01, Joao Costa, research objectives for PhD proposals, part 3 2020/03/25, Tao Shi, TPDS paper 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2020/04/01, Joao Costa, research objectives for PhD proposals, part 3 2020/03/25, Tao Shi, TPDS paper 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing. 2020/02/12, Fangfang Zhang and Boxiong Tan, give presentation on accepted EvoStar papers."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2020/04/22, Soheila Sadeghiram, 2020/04/15, Guanqiang Gao, memetic algorithm for multi-robot task allocation 2020/04/08, Chen Wang, survey on noisy evolutionary computation. 2020/04/01, Joao Costa, research objectives for PhD proposals, part 3 2020/03/25, Tao Shi, TPDS paper 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,9 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2020/04/22, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>,</li>
+<li>2020/04/15, <strong>Guanqiang Gao</strong>, memetic algorithm for multi-robot task allocation</li>
+<li>2020/04/08, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, survey on noisy evolutionary computation.</li>
 <li>2020/04/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals, part 3</li>
 <li>2020/03/25, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, TPDS paper</li>
 <li>2020/03/18, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, research objectives for PhD proposals, part 2</li>
