--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/xu-2020-genetic/">Genetic Programming with Delayed Routing for Multi-Objective Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/masood-2020-fitness/">A Fitness-based Selection Method for Pareto Local Search for Many-Objective Job Shop Scheduling</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/wang-2020-multi/">A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/costa-2020-cluster/">Cluster-based Hyper-Heuristic for the Large-Scale Vehicle Routing Problem</a></li>
   </ul>
   
   
