--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020memetic">1</a>]
+[<a name="xu2020genetic">1</a>]
+</td>
+<td class="bibtexitem">
+Binzi Xu, Yi&nbsp;Mei, Yan Wang, Zhicheng Ji, and Mengjie Zhang.
+ Genetic programming with delayed routing for multi-objective dynamic
+  flexible job shop scheduling.
+ <em>Evolutionary Computation</em>, apr 2020.
+[&nbsp;<a href="publication-accepted_bib.html#xu2020genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="jia2020memetic">2</a>]
 </td>
 <td class="bibtexitem">
 Ya-Hui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -35,7 +51,7 @@ Ya-Hui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolutionary">2</a>]
+[<a name="zhang2020evolutionary">3</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -52,7 +68,7 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020multi">3</a>]
+[<a name="wang2020multi">4</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -69,7 +85,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jackson2020genetic">4</a>]
+[<a name="jackson2020genetic">5</a>]
 </td>
 <td class="bibtexitem">
 Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -86,7 +102,7 @@ Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020cluster">5</a>]
+[<a name="costa2020cluster">6</a>]
 </td>
 <td class="bibtexitem">
 Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -103,7 +119,7 @@ Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="gao2020memetic">6</a>]
+[<a name="gao2020memetic">7</a>]
 </td>
 <td class="bibtexitem">
 Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
@@ -120,7 +136,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020genetic">7</a>]
+[<a name="ardeh2020genetic">8</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -137,7 +153,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="masood2020fitness">8</a>]
+[<a name="masood2020fitness">9</a>]
 </td>
 <td class="bibtexitem">
 Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
@@ -154,7 +170,7 @@ Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2020survey">9</a>]
+[<a name="da2020survey">10</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -171,7 +187,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020nsga">10</a>]
+[<a name="tan2020nsga">11</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
@@ -187,7 +203,7 @@ Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020guided">11</a>]
+[<a name="zhang2020guided">12</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -204,7 +220,7 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020genetic">12</a>]
+[<a name="zhang2020genetic">13</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -221,7 +237,7 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020group">13</a>]
+[<a name="tan2020group">14</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
@@ -238,7 +254,7 @@ Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="maclachlan2019genetic">14</a>]
+[<a name="maclachlan2019genetic">15</a>]
 </td>
 <td class="bibtexitem">
 Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
