--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="jia2020memetic"></a><pre>
+<h1>publication-accepted.bib</h1><a name="xu2020genetic"></a><pre>
+@article{<a href="publication-accepted.html#xu2020genetic">xu2020genetic</a>,
+  title = {Genetic Programming with Delayed Routing for Multi-Objective Dynamic Flexible Job Shop Scheduling},
+  author = {Xu, Binzi and Mei, Yi and Wang, Yan and Ji, Zhicheng and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  month = {apr},
+  year = {2020},
+  publisher = {MIT Press},
+  doi = {}
+}
+</pre>
+
+<a name="jia2020memetic"></a><pre>
 @inproceedings{<a href="publication-accepted.html#jia2020memetic">jia2020memetic</a>,
   title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
   author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
