--- a/supervision/index.html
+++ b/supervision/index.html
@@ -551,7 +551,7 @@ Grouping Constrained Storage Location Assignment Problem&rdquo; <a href="https:/
 <h3 id="summer-research-scholarship-students">Summer Research Scholarship Students</h3>
 
 <ul>
-<li>__Jericho Jackson</li>
+<li><strong>Jericho Jackson</strong> (Victoria University of Wellington, 2019): &ldquo;Genetic Programming Hyper-heuristics for Stochastic Tourist Trip Design&rdquo; (with Prof Mengjie Zhang)</li>
 <li><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
 <li><strong>Jordan MacLachlan</strong> (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Arc Routing&rdquo;</li>
 <li><strong>Daniel Yska</strong> (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
