--- a/index.html
+++ b/index.html
@@ -765,8 +765,10 @@
 <h3 id="grants">Grants</h3>
 
 <ul>
-<li><strong>2017-2020</strong>, &ldquo;Automatic Design of Heuristics for Dynamic Arc Routing Problem with Genetic Programming&rdquo;, 16-VUW-079, <strong>Marsden Fund Fast-Start Grant</strong>, $300,000 NZD. (Sole PI)</li></li>
-<li><strong>2017-2020</strong>, &ldquo;Cooperative Co-evolution for Large Scale Black Box Optimisation&rdquo;, 61673194, <strong>National Natural Science Foundation of China</strong>, &yen;610,000 RMB (Overseas AI)</li></li>
+<li><strong>2020-2027</strong>, &ldquo;A data-science driven evolution of aquaculture for building the blue economy (AI/ML Advanced Research and Applications to Aquaculture)&rdquo;. <strong>MBIE SSIF Fund on Data Science</strong>, $13,000,000 NZD. (Key Researcher)</li>
+<li><strong>2019-2020</strong>, &ldquo;AI/ML techniques for Waste Collection in NZ&rdquo;, <strong>industrial project with <a href="https://www.northlandwaste.co.nz">Northland Waste</a></strong>, $16,000 NZD. (PI)</li>
+<li><strong>2017-2020</strong>, &ldquo;Automatic Design of Heuristics for Dynamic Arc Routing Problem with Genetic Programming&rdquo;, 16-VUW-079, <strong>Marsden Fund Fast-Start Grant</strong>, $300,000 NZD. (Sole PI)</li>
+<li><strong>2017-2020</strong>, &ldquo;Cooperative Co-evolution for Large Scale Black Box Optimisation&rdquo;, 61673194, <strong>National Natural Science Foundation of China</strong>, &yen;610,000 RMB (Overseas AI)</li>
 <li><strong>2018-2019</strong>, “Solving Huawei’s Job Shop Scheduling Problem”, Huawei Innovation Research Program, $80,000 NZD. (Co-PI)</li>
 <li><strong>2018</strong>, &ldquo;Real-Time Tourist Trip Recommendation using Genetic Programming&rdquo;, <strong>University Research Fund</strong>, Victoria University of Wellington, $28,720 NZD (Sole PI)</li>
 <li><strong>2016-2018</strong>, &ldquo;Digital Data in Schools: An Exploration of Research and Practice&rdquo;, <strong>Victoria University of Wellington Digital Future Grant</strong>, $20,000 NZD (Co-PI)</li>
