--- a/index.html
+++ b/index.html
@@ -2753,13 +2753,13 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="conference-organisation">Conference Organisation</h3>
 
 <ul>
-<li><strong>Proceedings Chair</strong>, IEEE Congress on Evolutionary Computation (CEC) <a href="www.cec2019.org">2019</a></li>
-<li><strong>Tutorial Co-chair</strong>, Pacific Rim International Conferences on Artificial Intelligence (PRICAI) <a href="https://www.pricai.org/2019/">2019</a></li>
-<li><strong>Sponsorship Chair</strong>, Australasian Joint Conference on Artificial Intelligence <a href="https://ecs.victoria.ac.nz/Events/AI2018/">2018</a></li>
-<li><strong>Technical Co-chair</strong>, International Conference on Data Intelligence and Security (ICDIS) <a href="http://www.icdis.org/">2018</a></li>
-<li><strong>Organisational Committee Member</strong>, International Conference on Computers and Industrial Engineering (CIE) <a href="http://cie48.com/">2018</a></li>
+<li><strong>Proceedings Chair</strong>, IEEE Congress on Evolutionary Computation (CEC) 2019</li>
+<li><strong>Tutorial Co-chair</strong>, Pacific Rim International Conferences on Artificial Intelligence (PRICAI) 2019</li>
+<li><strong>Sponsorship Chair</strong>, Australasian Joint Conference on Artificial Intelligence 2018</li>
+<li><strong>Technical Co-chair</strong>, International Conference on Data Intelligence and Security (ICDIS) 2018</li>
+<li><strong>Organisational Committee Member</strong>, International Conference on Computers and Industrial Engineering (CIE) 2018</li>
 <li><strong>Co-Chair</strong>, <a href="http://www.ieeessci2020.org/symposiums/esco.html">IEEE Symposium on Evolutionary Scheduling and Combinatorial Optimisation</a>, in IEEE SSCI 2019, <a href="http://www.ieeessci2020.org">2020</a></li>
-<li><strong>Co-chair</strong> of Special Session on Evolutionary Scheduling and Combinatorial Optimisation, IEEE Congress on Evolutionary Computation (CEC) 2016, 2017, 2018, 2019, 2020</li>
+<li><strong>Co-chair</strong> of Special Session on Evolutionary Scheduling and Combinatorial Optimisation, IEEE Congress on Evolutionary Computation (CEC) 2016, 2017, 2018, 2019, <a href="https://wcci2020.org">2020</a></li>
 <li><strong>Co-chair</strong> of Special Session on Evolutionary Computation for Service-Oriented Computing, IEEE Congress on Evolutionary Computation (CEC) 2017, 2018, 2019</li>
 <li><strong>Co-chair</strong> of Special Session on Transfer Learning in Evolutionary Computation, IEEE Congress on Evolutionary Computation (CEC) 2016</li>
 <li><strong>Co-chair</strong> of Special Session on Computational Intelligence for Scheduling and Combinatorial Optimization, Asia-Pacific Symposium on Intelligent and Evolutionary Systems (IES) 2016</li>
