--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -210,9 +210,9 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
  Guided subtree selection for genetic operators in genetic programming
   for dynamic flexible job shop scheduling.
  In <em>Proceedings of the European Conference on Genetic
-  Programming</em>. Springer, feb 2020.
+  Programming</em>, pages 262--278. Springer, apr 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020guided">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1007/978-3-030-44094-7_17">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -227,9 +227,10 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
  Genetic programming with adaptive search based on the frequency of
   features for dynamic flexible job shop scheduling.
  In <em>Proceedings of the European Conference on Evolutionary
-  Computation in Combinatorial Optimisation</em>. Springer, feb 2020.
+  Computation in Combinatorial Optimisation</em>, pages 214--230. Springer, apr
+  2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1007/978-3-030-43680-3_14">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -244,9 +245,10 @@ Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
  A group genetic algorithm for resource allocation in container-based
   clouds.
  In <em>Proceedings of the European Conference on Evolutionary
-  Computation in Combinatorial Optimisation</em>. Springer, feb 2020.
+  Computation in Combinatorial Optimisation</em>, pages 180--196. Springer, apr
+  2020.
 [&nbsp;<a href="publication-accepted_bib.html#tan2020group">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1007/978-3-030-43680-3_12">DOI</a>&nbsp;]
 
 </td>
 </tr>
