--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -153,11 +153,11 @@
   title = {Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the European Conference on Genetic Programming},
-  pages = {},
+  pages = {262--278},
   year = {2020},
-  month = {feb},
+  month = {apr},
   organization = {Springer},
-  doi = {}
+  doi = {10.1007/978-3-030-44094-7_17}
 }
 </pre>
 
@@ -166,11 +166,11 @@
   title = {Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
-  pages = {},
+  pages = {214--230},
   year = {2020},
-  month = {feb},
+  month = {apr},
   organization = {Springer},
-  doi = {}
+  doi = {10.1007/978-3-030-43680-3_14}
 }
 </pre>
 
@@ -179,11 +179,11 @@
   title = {A Group Genetic Algorithm for Resource Allocation in Container-based Clouds},
   author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
   booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
-  pages = {},
+  pages = {180--196},
   year = {2020},
-  month = {feb},
+  month = {apr},
   organization = {Springer},
-  doi = {}
+  doi = {10.1007/978-3-030-43680-3_12}
 }
 </pre>
 
