--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="liu2019predictive"></a><pre>
+<h1>publication-journal.bib</h1><a name="maclachlan2019genetic"></a><pre>
+@article{<a href="publication-journal.html#maclachlan2019genetic">maclachlan2019genetic</a>,
+  title = {Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems},
+  author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
+  journal = {Evolutionary Computation},
+  month = {nov},
+  year = {2019},
+  publisher = {MIT Press},
+  doi = {10.1162/evco_a_00267}
+}
+</pre>
+
+<a name="liu2019predictive"></a><pre>
 @article{<a href="publication-journal.html#liu2019predictive">liu2019predictive</a>,
   title = {A Predictive-Reactive Approach with Genetic Programming and Cooperative Co-evolution for Uncertain Capacitated Arc Routing Problem},
   author = {Liu, Yuxin and Mei, Yi and Zhang, Mengjie and Zhang, Zili},
