--- a/publication-journal.html
+++ b/publication-journal.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2019predictive">1</a>]
+[<a name="maclachlan2019genetic">1</a>]
+</td>
+<td class="bibtexitem">
+Jordan MacLachlan, Yi&nbsp;Mei, Juergen Branke, and Mengjie Zhang.
+ Genetic programming hyper-heuristics with vehicle collaboration for
+  uncertain capacitated arc routing problems.
+ <em>Evolutionary Computation</em>, nov 2019.
+[&nbsp;<a href="publication-journal_bib.html#maclachlan2019genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1162/evco_a_00267">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="liu2019predictive">2</a>]
 </td>
 <td class="bibtexitem">
 Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
@@ -34,7 +50,7 @@ Yuxin Liu, Yi&nbsp;Mei, Mengjie Zhang, and Zili Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2018evolutionary">2</a>]
+[<a name="tan2018evolutionary">3</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -50,7 +66,7 @@ Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="huang2020fast">3</a>]
+[<a name="huang2020fast">4</a>]
 </td>
 <td class="bibtexitem">
 Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
@@ -66,7 +82,7 @@ Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="al2019survey">4</a>]
+[<a name="al2019survey">5</a>]
 </td>
 <td class="bibtexitem">
 Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, Binh Tran,
@@ -83,7 +99,7 @@ Harith Al-Sahaf, Ying Bi, Qi&nbsp;Chen, Andrew Lensen, Yi&nbsp;Mei, Yanan Sun, B
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2019hybrid">5</a>]
+[<a name="nguyen2019hybrid">6</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
@@ -99,7 +115,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="xie2018bi">6</a>]
+[<a name="xie2018bi">7</a>]
 </td>
 <td class="bibtexitem">
 Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
@@ -116,7 +132,7 @@ Jing Xie, Yi&nbsp;Mei, Andreas&nbsp;T Ernst, Xiaodong Li, and Andy Song.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="park2018investigation">7</a>]
+[<a name="park2018investigation">8</a>]
 </td>
 <td class="bibtexitem">
 John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
@@ -132,7 +148,7 @@ John Park, Yi&nbsp;Mei, Su&nbsp;Nguyen, Gang Chen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2018evolutionary">8</a>]
+[<a name="da2018evolutionary">9</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
@@ -148,7 +164,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Yi&nbsp;Mei, Hui Ma, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2017efficient">9</a>]
+[<a name="mei2017efficient">10</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
@@ -166,7 +182,7 @@ Yi&nbsp;Mei, Su&nbsp;Nguyen, Bing Xue, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="islam2017time">10</a>]
+[<a name="islam2017time">11</a>]
 </td>
 <td class="bibtexitem">
 Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
@@ -182,7 +198,7 @@ Md&nbsp;Jakirul Islam, Xiaodong Li, and Yi&nbsp;Mei.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2017dg2">11</a>]
+[<a name="omidvar2017dg2">12</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -199,7 +215,7 @@ Mohammad&nbsp;Nabi Omidvar, Ming Yang, Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="nguyen2017genetic">12</a>]
+[<a name="nguyen2017genetic">13</a>]
 </td>
 <td class="bibtexitem">
 Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -215,7 +231,7 @@ Su&nbsp;Nguyen, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="rahaman2017capra">13</a>]
+[<a name="rahaman2017capra">14</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D Salim.
@@ -230,7 +246,7 @@ Mohammad&nbsp;Saiedur Rahaman, Yi&nbsp;Mei, Margaret Hamilton, and Flora&nbsp;D 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2017memetic">14</a>]
+[<a name="zhang2017memetic">15</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
@@ -247,7 +263,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Ke&nbsp;Tang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="liu2016analysis">15</a>]
+[<a name="liu2016analysis">16</a>]
 </td>
 <td class="bibtexitem">
 Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
@@ -264,7 +280,7 @@ Jianhua Liu, Yi&nbsp;Mei, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016efficient">16</a>]
+[<a name="mei2016efficient">17</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
@@ -282,7 +298,7 @@ Yi&nbsp;Mei, Flora&nbsp;D Salim, and Xiaodong Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="consoli2016dynamic">17</a>]
+[<a name="consoli2016dynamic">18</a>]
 </td>
 <td class="bibtexitem">
 Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
@@ -298,7 +314,7 @@ Pietro&nbsp;A Consoli, Yi&nbsp;Mei, Leandro&nbsp;L Minku, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016investigation">18</a>]
+[<a name="mei2016investigation">19</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -314,7 +330,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2016competitive">19</a>]
+[<a name="mei2016competitive">20</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
@@ -332,7 +348,7 @@ Yi&nbsp;Mei, Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2014cooperative">20</a>]
+[<a name="mei2014cooperative">21</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
@@ -350,7 +366,7 @@ Yi&nbsp;Mei, Xiaodong Li, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="omidvar2014cooperative">21</a>]
+[<a name="omidvar2014cooperative">22</a>]
 </td>
 <td class="bibtexitem">
 Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
@@ -368,7 +384,7 @@ Mohammad&nbsp;Nabi Omidvar, Xiaodong Li, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011memetic">22</a>]
+[<a name="mei2011memetic">23</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -385,7 +401,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2011decomposition">23</a>]
+[<a name="mei2011decomposition">24</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
@@ -403,7 +419,7 @@ Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tang2009memetic">24</a>]
+[<a name="tang2009memetic">25</a>]
 </td>
 <td class="bibtexitem">
 Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
@@ -421,7 +437,7 @@ Ke&nbsp;Tang, Yi&nbsp;Mei, and Xin Yao.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mei2009global">25</a>]
+[<a name="mei2009global">26</a>]
 </td>
 <td class="bibtexitem">
 Yi&nbsp;Mei, Ke&nbsp;Tang, and Xin Yao.
