--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2020/05/20, Shaolin Wang, 2020/05/13, Kirita-Rose Escott, Multi-objective optimization for workflow scheduling under task selection policies in clouds 2020/05/06, Mazhar Anzari Ardeh, generalised surrogate-assisted memetic algorithm 2020/04/29, Chen Wang, discussion on EvoStar 2020 2020/04/22, Soheila Sadeghiram, A User-Preference Driven Lexicographic Approach for Multi-Objective Web Service Composition 2020/04/15, Guanqiang Gao, memetic algorithm for multi-robot task allocation 2020/04/08, Chen Wang, survey on noisy evolutionary computation. 2020/04/01, Joao Costa, research objectives for PhD proposals, part 3 2020/03/25, Tao Shi, TPDS paper 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing.">
+  <meta name="description" content="2020/06/10, 2020/06/03, Whole Group, proofreading and reference management 2020/05/27, Kirita-Rose Escott, GRP-HEFT: A Budget-Constrained Resource Provisioning Scheme for Workflow Scheduling in IaaS Clouds 2020/05/20, Shaolin Wang, simplification techniques in GP 2020/05/13, Kirita-Rose Escott, Multi-objective optimization for workflow scheduling under task selection policies in clouds 2020/05/06, Mazhar Anzari Ardeh, generalised surrogate-assisted memetic algorithm 2020/04/29, Chen Wang, discussion on EvoStar 2020 2020/04/22, Soheila Sadeghiram, A User-Preference Driven Lexicographic Approach for Multi-Objective Web Service Composition 2020/04/15, Guanqiang Gao, memetic algorithm for multi-robot task allocation 2020/04/08, Chen Wang, survey on noisy evolutionary computation.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2020/05/20, Shaolin Wang, 2020/05/13, Kirita-Rose Escott, Multi-objective optimization for workflow scheduling under task selection policies in clouds 2020/05/06, Mazhar Anzari Ardeh, generalised surrogate-assisted memetic algorithm 2020/04/29, Chen Wang, discussion on EvoStar 2020 2020/04/22, Soheila Sadeghiram, A User-Preference Driven Lexicographic Approach for Multi-Objective Web Service Composition 2020/04/15, Guanqiang Gao, memetic algorithm for multi-robot task allocation 2020/04/08, Chen Wang, survey on noisy evolutionary computation. 2020/04/01, Joao Costa, research objectives for PhD proposals, part 3 2020/03/25, Tao Shi, TPDS paper 2020/03/18, Joao Costa, research objectives for PhD proposals, part 2 2020/03/11, Joao Costa, research objectives for PhD proposals 2020/03/04, Mahdi Abdollahi, ontology-based data augmentation for medical text classification 2020/02/26, Victoria Huang, multi-agent reinforcement learning for online network controller scheduling 2020/02/19, Shaolin Wang, multi-objective genetic programming for evolving routing policies for uncertain arc routing."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2020/06/10, 2020/06/03, Whole Group, proofreading and reference management 2020/05/27, Kirita-Rose Escott, GRP-HEFT: A Budget-Constrained Resource Provisioning Scheme for Workflow Scheduling in IaaS Clouds 2020/05/20, Shaolin Wang, simplification techniques in GP 2020/05/13, Kirita-Rose Escott, Multi-objective optimization for workflow scheduling under task selection policies in clouds 2020/05/06, Mazhar Anzari Ardeh, generalised surrogate-assisted memetic algorithm 2020/04/29, Chen Wang, discussion on EvoStar 2020 2020/04/22, Soheila Sadeghiram, A User-Preference Driven Lexicographic Approach for Multi-Objective Web Service Composition 2020/04/15, Guanqiang Gao, memetic algorithm for multi-robot task allocation 2020/04/08, Chen Wang, survey on noisy evolutionary computation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,10 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2020/05/20, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>,</li>
+<li>2020/06/10,</li>
+<li>2020/06/03, <strong>Whole Group</strong>, proofreading and reference management</li>
+<li>2020/05/27, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, GRP-HEFT: A Budget-Constrained Resource Provisioning Scheme for Workflow Scheduling in IaaS Clouds</li>
+<li>2020/05/20, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, simplification techniques in GP</li>
 <li>2020/05/13, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, Multi-objective optimization for workflow scheduling under task selection policies in clouds</li>
 <li>2020/05/06, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, generalised surrogate-assisted memetic algorithm</li>
 <li>2020/04/29, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, discussion on EvoStar 2020</li>
