--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -193,7 +193,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
  An nsga-ii-based approach for multi-objective micro-service
   allocation in container-based clouds.
- In <em>Proceedings of the CCGrid</em>. IEEE, feb 2020.
+ In <em>Proceedings of the CCGrid</em>, pages 282--289. IEEE, jun 2020.
 [&nbsp;<a href="publication-accepted_bib.html#tan2020nsga">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
