--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -140,9 +140,9 @@
   title = {An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds},
   author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
   booktitle = {Proceedings of the CCGrid},
-  pages = {},
+  pages = {282--289},
   year = {2020},
-  month = {feb},
+  month = {jun},
   organization = {IEEE},
   doi = {}
 }
