--- a/publication/index.html
+++ b/publication/index.html
@@ -6821,6 +6821,14 @@
 </button>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/xie-2018-bi/code.zip" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
