--- a/publication/xie-2018-bi/index.html
+++ b/publication/xie-2018-bi/index.html
@@ -581,6 +581,14 @@
 </button>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/xie-2018-bi/code.zip" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
