--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -509,7 +509,7 @@
 <li>2020/07/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, proposal seminar</li>
 <li>2020/06/24, <strong>Whole Group</strong>, keynote on AAMAS</li>
 <li>2020/06/17, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, guided crossover for genetic programming for dynamic flexible job shop scheduling</li>
-<li>2020/06/10, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a>, practice on PhD proposal objectives</li>
+<li>2020/06/10, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a><strong>, practice on PhD proposal objectives</li>
 <li>2020/06/03, <strong>Whole Group</strong>, proofreading and reference management</li>
 <li>2020/05/27, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, GRP-HEFT: A Budget-Constrained Resource Provisioning Scheme for Workflow Scheduling in IaaS Clouds</li>
 <li>2020/05/20, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, simplification techniques in GP</li>
