--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/da-2020-survey/">A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/tan-2020-nsga/">An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/xu-2020-genetic/">Genetic Programming with Delayed Routing for Multi-Objective Dynamic Flexible Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2020-guided/">Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
   
