--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -26,7 +26,7 @@ Binzi Xu, Yi&nbsp;Mei, Yan Wang, Zhicheng Ji, and Mengjie Zhang.
   flexible job shop scheduling.
  <em>Evolutionary Computation</em>, apr 2020.
 [&nbsp;<a href="publication-accepted_bib.html#xu2020genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1162/evco_a_00273">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -177,7 +177,7 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
  A survey of evolutionary computation for web service composition: A
   technical perspective.
  <em>IEEE Transactions on Emerging Topics in Computational
-  Intelligence</em>, feb 2020.
+  Intelligence</em>, (4):538--554, jul 2020.
 [&nbsp;<a href="publication-accepted_bib.html#da2020survey">bib</a>&nbsp;| 
 <a href="https://doi.org/10.1109/TETCI.2020.2969213">DOI</a>&nbsp;]
 
