--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -15,7 +15,7 @@
   month = {apr},
   year = {2020},
   publisher = {MIT Press},
-  doi = {}
+  doi = {10.1162/evco_a_00273}
 }
 </pre>
 
@@ -128,8 +128,11 @@
   title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
   author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
   journal = {IEEE Transactions on Emerging Topics in Computational Intelligence},
-  month = {feb},
+  month = {jul},
   year = {2020},
+  vol = {4},
+  number = {4},
+  pages = {538--554},
   publisher = {IEEE},
   doi = {10.1109/TETCI.2020.2969213}
 }
