--- a/404.html
+++ b/404.html
@@ -394,7 +394,15 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/jia-2020-memetic/">A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/da-2020-survey/">A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/zhang-2020-evolutionary/">Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics</a></li>
   </ul>
   
   <ul>
@@ -403,14 +411,6 @@
   
   <ul>
     <li><a href="/publication/tan-2020-group/">A Group Genetic Algorithm for Resource Allocation in Container-based Clouds</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2020-genetic/">Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/xu-2020-genetic/">Genetic Programming with Delayed Routing for Multi-Objective Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
   
