--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -41,9 +41,9 @@ Ya-Hui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
  A memetic level-based learning swarm optimizer for large-scale water
   distribution network optimization.
  In <em>Proceedings of the ACM Genetic and Evolutionary Computation
-  Conference</em>. ACM, mar 2020.
+  Conference</em>, pages 1107--1115. ACM, jul 2020.
 [&nbsp;<a href="publication-accepted_bib.html#jia2020memetic">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1145/3377930.3389828">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -58,9 +58,9 @@ Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
  Evolutionary multitasking for dynamic flexible job shop scheduling
   via genetic programming hyper-heuristics.
  In <em>Proceedings of the ACM Genetic and Evolutionary Computation
-  Conference Companion</em>. ACM, mar 2020.
+  Conference Companion</em>, pages 107--108. ACM, jul 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020evolutionary">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1145/3377929.3389934">DOI</a>&nbsp;]
 
 </td>
 </tr>
