--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -24,11 +24,11 @@
   title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
   author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference},
-  pages = {},
+  pages = {1107--1115},
   year = {2020},
-  month = {mar},
+  month = {jul},
   organization = {ACM},
-  doi = {}
+  doi = {10.1145/3377930.3389828}
 }
 </pre>
 
@@ -37,11 +37,11 @@
   title = {Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
   author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
   booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference Companion},
-  pages = {},
+  pages = {107--108},
   year = {2020},
-  month = {mar},
+  month = {jul},
   organization = {ACM},
-  doi = {}
+  doi = {10.1145/3377929.3389934}
 }
 </pre>
 
