--- a/index.html
+++ b/index.html
@@ -2050,6 +2050,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/jia-2020-memetic/jia-2020-memetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2292,6 +2296,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2020-evolutionary/zhang-2020-evolutionary.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
