--- a/publication/index.html
+++ b/publication/index.html
@@ -921,6 +921,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2020-evolutionary/zhang-2020-evolutionary.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1117,6 +1121,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/jia-2020-memetic/jia-2020-memetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
