--- a/publication/jia-2020-memetic/index.html
+++ b/publication/jia-2020-memetic/index.html
@@ -533,6 +533,8 @@
 
 
 
+  
+
 
 
 
@@ -552,6 +554,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/jia-2020-memetic/jia-2020-memetic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
