--- a/publication/zhang-2020-evolutionary/index.html
+++ b/publication/zhang-2020-evolutionary/index.html
@@ -533,6 +533,8 @@
 
 
 
+  
+
 
 
 
@@ -552,6 +554,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/zhang-2020-evolutionary/zhang-2020-evolutionary.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
